--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@thebigsalmon/stingray",
-  "version": "0.3.2",
+  "version": "0.4.0",
   "description": "",
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
@@ -33,6 +33,7 @@
     "eslint": "8.32.0",
     "eslint-config-prettier": "8.6.0",
     "eslint-plugin-prettier": "4.2.1",
+    "json-schema-to-typescript": "11.0.3",
     "prettier": "2.8.3"
   },
   "files": [
