--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "eslint-config-prettier": "8.6.0",
     "eslint-plugin-prettier": "4.2.1",
     "json-schema-to-typescript": "11.0.3",
-    "prettier": "2.8.3"
+    "prettier": "2.8.3",
+    "ts-morph": "17.0.1"
   },
   "files": [
     "bin",
