--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@thebigsalmon/stingray",
-  "version": "0.9.1",
+  "version": "0.9.2",
   "description": "",
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
@@ -33,8 +33,7 @@
     "eslint": "8.32.0",
     "eslint-config-prettier": "8.6.0",
     "eslint-plugin-prettier": "4.2.1",
-    "prettier": "2.8.3",
-    "ts-morph": "17.0.1"
+    "prettier": "2.8.3"
   },
   "files": [
     "bin",
@@ -58,6 +57,7 @@
     "node-schedule": "2.1.1",
     "pg": "8.8.0",
     "sharp": "0.31.3",
+    "ts-morph": "17.0.1",
     "typescript": "4.9.4",
     "typescript-json-schema": "0.55.0",
     "uuid": "9.0.0"
